--- a/proto.html
+++ b/proto.html
@@ -55,12 +55,24 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://rog.asus.com/media/1590510974402.jpg"class="d-block w-100" src="..." alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>JOIN THE EPIC UNION OF GAMERS</h5>
+    <p>they'll help you from not getting rekt</p>
+  </div>
     </div>
     <div class="carousel-item">
       <img src="https://rog.asus.com/media/1591700095580.jpg" class="d-block w-100" src="..." alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>MEET PEOPLE WITH INTERESTS SIMILAR TO YOURS</h5>
+    <p>start with a crew and build an empire</p>
+  </div>
     </div>
     <div class="carousel-item">
       <img src="https://rog.asus.com/media/1589570302548.jpg" class="d-block w-100" src="..." alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>SHARE YOUR ADVENTURES</h5>
+    <p>carve your legacy</p>
+  </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
