--- a/proto.html
+++ b/proto.html
@@ -12,7 +12,10 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">
+    <img src="https://raw.githubusercontent.com/non-of-ur-buisness/eep/master/Free_Sample_By_Wix.jpg?token=AP5NGU7JZ4F4FNRZ7WYDQWS65HZSY" alt=" ">
+    EEP
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -55,24 +58,12 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://rog.asus.com/media/1590510974402.jpg"class="d-block w-100" src="..." alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>JOIN THE EPIC UNION OF GAMERS</h5>
-    <p>they'll help you from not getting rekt</p>
-  </div>
     </div>
     <div class="carousel-item">
       <img src="https://rog.asus.com/media/1591700095580.jpg" class="d-block w-100" src="..." alt="Second slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>MEET PEOPLE WITH INTERESTS SIMILAR TO YOURS</h5>
-    <p>start with a crew and build an empire</p>
-  </div>
     </div>
     <div class="carousel-item">
       <img src="https://rog.asus.com/media/1589570302548.jpg" class="d-block w-100" src="..." alt="Third slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>SHARE YOUR ADVENTURES</h5>
-    <p>carve your legacy</p>
-  </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
