--- a/proto.html
+++ b/proto.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Easter egg play</title>
-	<!-- CSS only -->
+  <title>Easter egg play</title>
+  <!-- CSS only -->
+ 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <!-- JS, Popper.js, and jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+     <link rel="stylesheet"  href="C:\Program Files\Sublime Text 3\proto.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">
-    <img src="https://raw.githubusercontent.com/non-of-ur-buisness/eep/master/Free_Sample_By_Wix.jpg?token=AP5NGU7JZ4F4FNRZ7WYDQWS65HZSY" alt=" ">
-    EEP
-  </a>
+  <a class="navbar-brand" href="#"><i class="fa fa-fw fa-gamepad"></i>
+     EEP</a>
+      <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
@@ -39,14 +44,12 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Communities</a>
       </li>
     </ul>
-        <a href="#" class="btn btn-primary">login</a>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    
+        <a href="#" class="btn btn-primary">Log in</a>
+        <a href="#" class="btn btn-success">Sign up</a>
   </div>
 </nav>
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -58,12 +61,24 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://rog.asus.com/media/1590510974402.jpg"class="d-block w-100" src="..." alt="First slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>JOIN THE EPIC UNION OF GAMERS</h5>
+    <p>they'll help you from not getting rekt</p>
+  </div>
     </div>
     <div class="carousel-item">
       <img src="https://rog.asus.com/media/1591700095580.jpg" class="d-block w-100" src="..." alt="Second slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>MEET PEOPLE WITH INTERESTS SIMILAR TO YOURS</h5>
+    <p>start with a crew and build an empire</p>
+  </div>
     </div>
     <div class="carousel-item">
       <img src="https://rog.asus.com/media/1589570302548.jpg" class="d-block w-100" src="..." alt="Third slide">
+      <div class="carousel-caption d-none d-md-block">
+    <h5>SHARE YOUR ADVENTURES</h5>
+    <p>carve your legacy</p>
+  </div>
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -74,6 +89,14 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+
+</div>
+
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Hello there, gamer!</h1>
+    <p class="lead">Welcome to your crash place! Here we connect players like you globally.</p>
+  </div>
 </div>
 </body>
-</html>>	
+</html>>  
