--- a/proto.html
+++ b/proto.html
@@ -112,8 +112,8 @@
           <div class="col-xs-6 col-md-3">
             <h6>Categories</h6>
             <ul class="footer-links">
-              <li><a href="#" class="btn btn-primary" >login</a></li>
-              <li><a href="#" class="btn btn-success">sign up</a></li>
+              <li><a href="#" >login</a></li>
+              <li><a href="#" >sign up</a></li>
               <li><a href="#"> Got a problem?</a></li>
               <li><a href="#">Got a compliment?</a></li>
             </ul>
