login page created
with the css file too

--- a/proto.html
+++ b/proto.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"><i class="fa fa-fw fa-gamepad"></i>
+  <a class="navbar-brand" href="proto.html"><i class="fa fa-fw fa-gamepad"></i>
      EEP</a>
       <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -49,7 +49,7 @@
       </li>
     </ul>
     
-        <a href="#" class="btn btn-primary">Log in</a>
+        <a href="login.html" class="btn btn-primary">Log in</a>
         <a href="#" class="btn btn-success">Sign up</a>
   </div>
 </nav>
@@ -112,7 +112,7 @@
           <div class="col-xs-6 col-md-3">
             <h6>Categories</h6>
             <ul class="footer-links">
-              <li><a href="#" >login</a></li>
+              <li><a href="login.html" >login</a></li>
               <li><a href="#" >sign up</a></li>
               <li><a href="#"> Got a problem?</a></li>
               <li><a href="#">Got a compliment?</a></li>
