--- a/login.html
+++ b/login.html
@@ -58,7 +58,12 @@
         </ul>
         </div>
       </nav>
-      
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Welcome back gamer!</h1>
+          <p class="lead">Login and continue your journey!</p>
+        </div>
+      </div>
       <div class="container">
         <div class="row">
 			<div class="col-md-5 mx-auto">
